Interpolation in guarded patterns.